--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "cypress open"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "next": "12.1.0",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "cypress": "^9.5.0",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0"
   }
