set up authentication for sign up, set cookie and redirect to homepage
Co-authored-by: Miah <78933903+miahbates@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "cypress open"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.0",
     "next": "12.1.0",
     "pg": "^8.7.3",
