--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cookies": "^0.8.0",
     "dotenv": "^16.0.0",
     "next": "12.1.0",
     "pg": "^8.7.3",
