--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "cypress open"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
     "bcryptjs": "^2.4.3",
     "cookies": "^0.8.0",
     "dotenv": "^16.0.0",
