--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fontawesome": "^1.7.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
