--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-fontawesome": "^1.7.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "twilio": "^3.75.0"
   },
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.6",
