Comment out YAML

--- a/.github/workflows/scheduled.yaml
+++ b/.github/workflows/scheduled.yaml
@@ -12,16 +12,16 @@
 #           --url 'https://be-kind-re-mind-ten.vercel.app/api/fake-send-message' \
 #           --header 'Authorization: Bearer ${{ secrets.ACTION_KEY }}'
 
-name: test-cron-job
-on:
-  schedule:
-    - cron: "* * * * *"
-jobs:
-  cron:
-    runs-on: ubuntu-latest
-    steps:
-      - name: test-cron-job
-        run: |
-          curl --request POST \
-          --url 'https://be-kind-re-mind-ten.vercel.app/api/fake-send-message' \
-          --header 'Authorization: Bearer ${{ secrets.ACTION_KEY }}'
+# name: test-cron-job
+# on:
+#   schedule:
+#     - cron: "* * * * *"
+# jobs:
+#   cron:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: test-cron-job
+#         run: |
+#           curl --request POST \
+#           --url 'https://be-kind-re-mind-ten.vercel.app/api/fake-send-message' \
+#           --header 'Authorization: Bearer ${{ secrets.ACTION_KEY }}'
