--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-grid-heatmap": "^1.1.0",
+    "save": "^2.4.0",
     "styled-components": "^5.3.3",
     "twilio": "^3.75.0"
   },
