Send email on sign up
Co-Authored-By: Adam <31065348+adam8-9@users.noreply.github.com>
Co-Authored-By: Miah Elizabeth Bates <78933903+miahbates@users.noreply.github.com>
Co-Authored-By: Juliette Orpen <53294140+julietteorpen@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "@sendgrid/mail": "^7.6.2",
     "bcryptjs": "^2.4.3",
     "cookies": "^0.8.0",
     "dotenv": "^16.0.0",
+    "email-validator": "^2.0.4",
     "next": "12.1.0",
     "pg": "^8.7.3",
     "react": "17.0.2",
